--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "async": "^3.2.1",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "hbs": "~4.0.4",
+    "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.0.7",
     "morgan": "~1.9.1"
