--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-validator": "^6.12.2",
     "hbs": "~4.0.4",
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
