--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.0.7",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
